Feature/pagination navlinks (#20)
* feat: enhance nav-link API with pagination, role filter, search & sorting

* Minor Enhancements